--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.24.10",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.3.4",
     "next": "^13.2.0",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
