--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.12",
     "@tanstack/react-query": "^4.24.10",
+    "@types/react-leaflet": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.4",
     "next": "^13.2.0",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-google-maps": "^9.4.5"
   },
   "devDependencies": {
     "@types/node": "18.14.1",
