--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.12",
+    "@react-google-maps/api": "^2.18.1",
     "@tanstack/react-query": "^4.24.10",
     "@types/react-leaflet": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.4",
+    "leaflet": "^1.9.3",
     "next": "^13.2.0",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-maps": "^9.4.5"
+    "react-leaflet": "^4.2.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.1",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "tailwindcss": "^3.2.7",
