--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-leaflet": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
     "leaflet": "^1.9.3",
     "next": "^13.2.0",
     "postcss": "^8.4.21",
