--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
+    "chartjs-plugin-doughnutlabel": "^2.0.3",
     "leaflet": "^1.9.3",
     "next": "^13.2.0",
     "postcss": "^8.4.21",
