--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^13.2.0",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
+    "react-data-grid": "^7.0.0-beta.27",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.0"
   },
