--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/Components/Progress.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/Components/Progress.tsx", "src/Components/ListJanitorAssign.jsx"],
   "exclude": ["node_modules"]
 }
