--- a/UWC/package.json
+++ b/UWC/package.json
@@ -14,5 +14,8 @@
     "express": "^4.18.2",
     "fs": "0.0.1-security",
     "nodemon": "^2.0.22"
+  },
+  "nodemonConfig": {
+    "ext": "js,hbs,html"
   }
 }
